﻿shmuel 14.02.2019 15:21:37 +0200 - build 688

1. В функции mf.mload была возможна ситуация неосвобождения объекта доступа к базе данных.

shmuel 18.01.2019 19:31:11 +0200 - build 687

1. LuaFAR: мелкая подчистка (не баг-фикс).

shmuel 12.01.2019 20:56:37 +0200 - build 686

1. Уточнение 685.

shmuel 12.01.2019 19:16:29 +0200 - build 685

1. LuaFAR: добавлена экспортируемая функция luaopen_luafar3.
   - Это делает возможным использование luafar3.dll как обычной библиотеки для скриптов Lua 5.1,
     вне Far Manager (таблицы win, bit64, unicode; "юникодизация" функций работы со строками).
   - Естественно, при этом нельзя будет использовать таблицы, относящиеся к Far API.
   - Загрузка библиотеки: require "luafar3"

shmuel 25.12.2018 16:23:52 +0200 - build 684

1. farapi.lua: добавлены прототипы функций FSF.FarClock и FSF.CompareStrings.

shmuel 22.12.2018 21:07:42 +0200 - build 683

1. LuaFAR: во всех функциях, принимающих цвет, если цвет передан числом, то байт прозрачности
   принудительно устанавливается в 0xFF.

shmuel 16.12.2018 22:19:32 +0200 - build 682

1. Отмена 679.2:
   mf.mload не бросает ошибку, а возвращает 2 значения:
   1) собственно результат (валидный, если 2-е значение == nil).
   2) nil в случае успеха, либо сообщение об ошибке (string) в случае неудачи.

shmuel 16.12.2018 16:18:05 +0200 - build 681

1. mf.mdelete() возвращает булевое значение.

2. LuaFAR: во всех методах Settings Control параметр Root теперь типа flag
           (было: тип integer во всех, кроме Enum).

shmuel 15.12.2018 20:11:17 +0200 - build 680

1. Улучшено сообщение об ошибке в mf.mload().

shmuel 15.12.2018 16:35:39 +0200 - build 679

1. mf.msave() возвращает булевое значение.

2. mf.mload() "бросает" ошибку, если не удаётся установить соединение с базой данных.

3. LuaFAR: export.GetOpenPanelInfo() -> StartSortMode теперь типа flag (был тип integer).

4. LuaFAR: #M3663: возможность опустить параметры-флаги может быть нежелательна.
