@@ -1,4 +1,8 @@
-﻿shmuel 14.02.2019 15:21:37 +0200 - build 688
+﻿shmuel 14.02.2019 22:34:39 +0200 - build 689
+
+1. Меры по увеличению безопасности функции mf.mload.
+
+shmuel 14.02.2019 15:21:37 +0200 - build 688
 
 1. В функции mf.mload была возможна ситуация неосвобождения объекта доступа к базе данных.
 
